# harness-racing-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
apps/web/: README.md
data/parsed/: index.json
data/parsed/vic/2024/: GE310124.json  ML300124.json  MX290124.json
docs/: db-access.md  decomposition-plan.md  file-ownership.md  sprint-1-plan.md
docs/adr/: 0001-postgres-16.md
docs/erd/: erd.dbml
scripts/: db_watcher.ps1
services/api/: README.md
services/parser/: README.md  pyproject.toml
services/parser/src/harness_parser/: __init__.py  cli.py  dtos.py  parse.py  time_utils.py  transformer.py
services/parser/tests/: test_parse.py  test_time_utils.py
services/parser/tests/fixtures/meetings/: listing_vic_2024_01.html  manifest_vic_2024_01.json  meeting_vic_GE310124.html  meeting_vic_ML300124.html  meeting_vic_MX290124.html
services/scraper/: README.md  pyproject.toml
services/scraper/src/harness_scraper/: __init__.py  anti_bot.py  browser.py  calendar.py  cli.py  cookie_jar.py  db_ingest.py  fetcher.py  logging_setup.py  meetings.py  meetings_download.py  parsed_db_ingest.py  rate_limit.py  settings.py  urls.py
services/scraper/tests/: test_anti_bot.py  test_calendar.py  test_meetings.py  test_rate_limit.py  test_urls.py
sql/: schema.sql
sql/migrations/: 0001_initial.sql
sql/queries/: exploration.sql
