[project]
name = "harness-parser"
version = "0.0.0"
description = "HTML → Pydantic DTO parser/transformer for harness.org.au results"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10.0",
  "structlog>=24.4.0",
  "lxml>=5.3.0",
  "selectolax>=0.3.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[project.scripts]
harness-parser = "harness_parser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
