[project]
name = "harness-scraper"
version = "0.0.0"
description = "Playwright scraper with anti-bot subterfuge for harness.org.au"
requires-python = ">=3.12"
dependencies = [
  "playwright>=1.49.0",
  "playwright-stealth>=1.0.6",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "httpx>=0.27.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "anyio>=4.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[project.scripts]
harness-scraper = "harness_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_scraper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "network: tests that hit the live harness.org.au site (opt-in)",
]
